--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,12 @@ body {
     margin-right: 20px;
 }
 h1{ 
-    font-size: 45px;
+    font-size: 42px;
     text-align: center;
-    padding: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 h2{
     font-size: 30px;
@@ -17,7 +20,8 @@ h2{
 }
 p {
     font-size: 24px;
-    padding: 10px, 0px, 0px, 10px;
+    padding-top: 10px;
+    padding-left: 10px;
 }
 
 img{
@@ -30,7 +34,10 @@ img{
     border-width: 10px;
 }
 div{
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     border-style: solid;
     border-color: #FFFFFF;
     border-width: 3px;
@@ -59,11 +66,11 @@ div{
     border-width: 2px 5px 0px 0px; 
     
 }
-.blue > p{ 
+.blue p{ 
     color: #C4C4C4 
 }
 
-.blue > h2{
+.blue h2{
     color: #C4C4C4 
 }
 .yellow{
@@ -73,7 +80,7 @@ div{
     border-width: 0px 0px 2px 5px;
 }
 
-.yellow > p {
+.yellow p {
     color:  #707070;
 }
 
@@ -87,9 +94,16 @@ div{
 footer{
     background: rgb(0,0,0);
     background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,255,1) 25%, rgba(0,102,255,1) 70%, rgba(0,0,0,1) 100%);
-    font-size: 20px;
-    text-align: right;
-    padding: 15px 15px 15px 0px;
-
+    border-style: solid;
+    border-color: #FFFFFF;
+    border-width: 5px;
 }
 
+footer p {
+    font-size: 20px;
+    text-align: right;
+    padding-top: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    
+}
